--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -60,22 +60,16 @@
 
         <h2 id="productNameWithoutBrand" class="divider"></h2>
 
-        <img
-          id="productImage"
-          class="divider"
-          src=""
-          alt=""
-        />
+        <img id="productImage" class="divider" src="" alt="" />
 
         <p id="productFinalPrice" class="product-card__price"></p>
 
         <p id="productColorName" class="product__color"></p>
 
-        <p id="productDescriptionHtmlSimple" class="product__description">
-        </p>
+        <p id="productDescriptionHtmlSimple" class="product__description"></p>
 
         <div class="product-detail__add">
-          <button id="addToCart" data-id="344YJ">Add to Cart</button>
+          <button id="addToCart" data-id="">Add to Cart</button>
         </div>
       </section>
     </main>
