I create a function named checkoutTemplate, this function put HTML elements. Also, in renderCartContenst(), I create a if statement to check if the cart is empty or with products

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -91,6 +91,9 @@
           </li> -->
         </ul>
       </section>
+      <section class="checkout-area">
+        
+      </section>
     </main>
 
     <footer>&copy;NOT a real business</footer>
