--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -91,9 +91,7 @@
           </li> -->
         </ul>
       </section>
-      <section class="checkout-area">
-        
-      </section>
+      <section class="checkout-area"></section>
     </main>
 
     <footer>&copy;NOT a real business</footer>
