Added an alert module for alerts on the main page.

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
         </a>
       </div>
     </header>
-    <main class="divider">
+    <main id="main" class="divider">
       <div class="hero">
         <img
           src="/images/banner-sm.jpg"
