--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -17,21 +17,15 @@
   <body>
     <header class="divider" id="main-header"></header>
 
-    <main class="divider">
+    <main id="main" class="divider">
       <section class="product-detail">
         <h3 id="productName"></h3>
-
         <h2 id="productNameWithoutBrand" class="divider"></h2>
-
         <img id="productImage" class="divider" src="" alt="" />
-
         <p id="productFinalPrice" class="product-card__price"></p>
-
         <p id="productColorName" class="product__color"></p>
-
         <p id="productDescriptionHtmlSimple" class="product__description"></p>
-
-        <div class="product-detail__add">
+        <div id="buttonContainer" class="product-detail__add">
           <button id="addToCart" data-id="">Add to Cart</button>
         </div>
       </section>
