--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,10 @@
       </section>
       <section class="products">
         <h2>Top Products</h2>
-        <ul class="product-list" id="prodList"></ul>
+        <ul class="product-list" id="categoryListArea">
+          
+        </ul>
+        
       </section>
     </main>
     <footer id="main-footer"></footer>
