Completed Team 5 Activity

--- a/src/index.html
+++ b/src/index.html
@@ -32,10 +32,7 @@
       </section>
       <section class="products">
         <h2>Top Products</h2>
-        <ul class="product-list" id="categoryListArea">
-          
-        </ul>
-        
+        <ul class="product-list" id="categoryListArea"></ul>
       </section>
     </main>
     <footer id="main-footer"></footer>
