--- a/src/product-list/index.html
+++ b/src/product-list/index.html
@@ -12,7 +12,7 @@
     <header class="divider" id="main-header"></header>
     <main id="main" class="divider">
       <section class="products">
-        <h2>Top Products</h2>
+        <h2>Top Products: <span id="categoryTitle"></span></h2>
         <ul class="product-list" id="prodList"></ul>
       </section>
     </main>
