--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -23,8 +23,15 @@
         <h2 id="productNameWithoutBrand" class="divider"></h2>
         <img id="productImage" class="divider" src="" alt="" />
         <p id="productFinalPrice" class="product-card__price"></p>
-        <p id="productColorName" class="product__color"></p>
+        <p>Colors Available:
+          <ul id="productColorName" class="product__color"></ul>
+        </p>
         <p id="productDescriptionHtmlSimple" class="product__description"></p>
+        <div class="selectedColorArea">
+          Select Color: 
+          <select name="selectedColor" id="productSelectColor">  
+          </select>
+        </div>
         <div id="buttonContainer" class="product-detail__add">
           <button id="addToCart" data-id="">Add to Cart</button>
         </div>
