--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -8,8 +8,8 @@
 
     <title>Sleep Outside | Checkout</title>
 
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="../js/main.js" type="module"></script>
+    <link rel="stylesheet" href="/css/style.css" />
+    <script src="../js/checkout.js" type="module"></script>
   </head>
 
   <body>
@@ -18,38 +18,51 @@
     <main class="divider">
       <section class="products">
         <h2>Review & Place your Order</h2>
-        <form>
+        <form name="checkout">
           <fieldset legend="Shipping">
-            <label for="firstName">First Name<input name="firstName" type="text"></label>
-            <label for="lastName">Last Name<input name="lastName" type="text"></label>
-            <label for="city">City<input name="city" type="text"></label>
-            <label for="state">State<input name="state" type="text"></label>
-            <label for="zip">Zip<input name="zip" type="text"></label>
+            <label for="fname"
+              >First Name<input name="fname" type="text"
+            /></label>
+            <label for="lname"
+              >Last Name<input name="lname" type="text"
+            /></label>
+            <label for="city">City<input name="city" type="text" /></label>
+            <label for="state">State<input name="state" type="text" /></label>
+            <label for="zip"
+              >Zip<input name="zip" type="text" id="zip"
+            /></label>
           </fieldset>
           <fieldset legend="Payment">
-            <label for="cardNumber">Card Number<input name="cardNumber" type="text"></label>
-            <label for="expiration">Expiration<input name="expiration" type="text"></label>
-            <label for="securityCode">Security Code<input name="securityCode" type="password"></label>
+            <label for="cardNumber"
+              >Card Number<input name="cardNumber" type="text"
+            /></label>
+            <label for="expiration"
+              >Expiration<input name="expiration" type="text"
+            /></label>
+            <label for="code"
+              >Security Code<input name="code" type="password"
+            /></label>
           </fieldset>
           <fieldset legend="Order summary">
             <div>
               <span>Item Subtotal<span id="itemQuantity"></span></span>
               <span id="subtotal">$</span>
-            </div>       
+            </div>
             <div>
               <span>Shipping Estimate</span>
-              <span id="shippingCost">$</span>
-            </div>       
+              <span id="shipping">$</span>
+            </div>
             <div>
               <span>Tax</span>
               <span id="tax">$</span>
-            </div>       
+            </div>
             <div>
               <span>Order Total</span>
-              <span id="grandTotal">$</span>
-            </div>       
+              <span id="orderTotal">$</span>
+              <button id="checkoutSubmit" type="submit">Checkout</button>
+            </div>
           </fieldset>
-        </orm>
+        </form>
       </section>
     </main>
 
