--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -26,6 +26,7 @@
             <label for="lname"
               >Last Name<input name="lname" type="text" required
             /></label>
+            <label for="street">Street address<input name="street" type="text" required></label>
             <label for="city"
               >City<input name="city" type="text" required
             /></label>
@@ -38,7 +39,7 @@
           </fieldset>
           <fieldset legend="Payment">
             <label for="cardNumber"
-              >Card Number<input name="cardNumber" type="number" required
+              >Card Number<input name="cardNumber" type="text" required
             /></label>
             <label for="expiration"
               >Expiration<input name="expiration" type="text" required
