sorting for name or price

--- a/src/product-list/index.html
+++ b/src/product-list/index.html
@@ -13,6 +13,14 @@
     <main id="main" class="divider">
       <section class="products">
         <h2>Top Products: <span id="categoryTitle"></span></h2>
+        <div class="sorting_option">
+          <p>Sort by:
+            <select name="" id="sort_by">
+              <option value="sortByName">Name</option>
+              <option value="sortByPrice">Price</option>
+            </select>
+          </p>          
+        </div>
         <ul class="product-list" id="prodList"></ul>
       </section>
     </main>
