Add discount banner in product details.

--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -21,7 +21,10 @@
       <section class="product-detail">
         <h3 id="productName"></h3>
         <h2 id="productNameWithoutBrand" class="divider"></h2>
-        <img id="productImage" class="divider" src="" alt="" />
+        <div class="product-image-container divider">
+          <img id="productImage" src="" alt="" />
+          <div class="product-banner-text" id="productBannerText"></div>
+        </div>
         <p id="productFinalPrice" class="product-card__price"></p>
         <div id="colorsAvailableList">
           <p>Colors Available:</p>
