--- a/src/orders/index.html
+++ b/src/orders/index.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Sleep Outside | Checkout</title>
+    <title>Sleep Outside | Orders</title>
 
     <link rel="stylesheet" href="/css/style.css" />
     <script src="../js/checkout.js" type="module"></script>
@@ -16,9 +16,9 @@
     <header class="divider" id="main-header"></header>
 
     <main class="divider">
-      <h2>Success! Thank you for your order!</h2>
-      <p>We will get this out to you just as fast as we can!</p>
-      <p>Many happy dreams sleeping outside!</p>
+      <section class="products">
+        <h2>Process orders</h2>
+      </section>
     </main>
 
     <footer id="main-footer"></footer>
